# TheGreatGenotyper

./: .gitignore  .gitmodules  CMakeLists.txt  DownstreamAnalysis.ipynb  README.md  environment.yml  index_metadata.csv  mkdocs.yml
DatabaseBuilder/: CMakeLists.txt  README.md  Snakefile  computeHistogram.cpp  config.yaml  downloadUrls.csv  env.yaml  sample_table.csv  scratchCleaner.py  subsample_table.csv
DatabaseBuilder/1kg/: AFR_1.json  EUR_2.json  README.md  SRA.json  Snakefile  Snakefile.build  Snakefile.build_2.smk  Snakefile.build_3.smk  Snakefile.cattle.smk  Snakefile_SRA_AWS  Snakefile_globus  Snakefile_nolimits  all.json  build_tools  config.yaml  coverage.tsv  createSnakemakeFolder.py  env.yaml  fasterqdumb.yaml  remote_UCDavis_GoogleDr.files  sample_table.csv  subsample_table.csv
DatabaseBuilder/1kg/clusters/: cluster.Africa.1.sample_names  cluster.Africa.2.sample_names  cluster.Africa.3.sample_names  cluster.America.1.sample_names  cluster.America.2.sample_names  cluster.East_Asia.1.sample_names  cluster.East_Asia.2.sample_names  cluster.East_Asia_America_Oceanic.sample_names  cluster.MIX.sample_names  cluster.South_Asia.1.sample_names  cluster.South_Asia.2.sample_names  cluster.West_Eurasia.1.sample_names  cluster.West_Eurasia.2.sample_names
DatabaseBuilder/1kg/clusters_30_sep_2023/: cluster.Africa.ACB_PUR  cluster.Africa.ASW_MSL  cluster.Africa.ESN  cluster.Africa.GWD  cluster.Africa.LWK  cluster.Africa_middle_east.sample_names  cluster.America.1  cluster.America.2  cluster.America.3  cluster.America.4  (+21 more)
external-libraries/caches/: CMakeLists.txt
(+235 files in other folders)
